--- a/calc/mijn.css
+++ b/calc/mijn.css
@@ -7,7 +7,10 @@ box-sizing: border-box;
 body {
 background: rgb(53, 108, 191);
 }
-
+.good{
+background: rgb(81, 210, 133);
+width:200px;
+}
 .sel {
 background-color:#000;
 color:#fff;
