--- a/calc/mijn.css
+++ b/calc/mijn.css
@@ -3,9 +3,18 @@ margin:0;
 padding: 0;
 box-sizing: border-box;
 }
-
+html {
+    min-height: 100%;
+}
 body {
-background: rgb(53, 108, 191);
+/* background: rgb(53, 108, 191); */
+/* rgba(74, 153, 162, 0.63) */
+/* height: 100vh; */
+background-size:cover;
+
+}
+.test {
+background-image:linear-gradient(to right bottom, rgba(12, 173, 186, 0.57) ,rgba(12, 173, 186, 0.57)) ,url("1.jpg");
 }
 .good{
 background: rgb(81, 210, 133);
@@ -58,20 +67,9 @@ margin-right: 40px;
 
 
 }
-/* .form {
-display: inline-block;
-} */
-/* .pos_btn_1 {
-margin-right: 5px;
+.btn input{
+outline: none;
 }
-
-.pos_btn_2 {
-
-}
-
-.pos_btn_3 {
-
-} */
 .btn_style {
 background:rgb(215, 136, 136);
 padding: 10px 20px;
