--- a/my website/website_g/flex test/01/content.css
+++ b/my website/website_g/flex test/01/content.css
@@ -42,9 +42,26 @@ opacity: 0.7;
 overflow: hidden;
 padding: 0 5rem;
 position:relative;
+overflow: scroll;
+}
+.not_found {
+height:400px;
+position:absolute;
+width:100%;
+text-align: center;
+
 }
 
-
+.text_not_found {
+text-align: center;
+word-break: break-word;
+}
+.container_not_found {
+background: red;
+position: relative;
+width:60vw;
+margin:0 auto;
+}
 @media screen and (max-width:1200px){
 .pos {
 max-width:50px;
@@ -64,11 +81,20 @@ height:40px;
 
 }
 .text {
- word-break: break-all;
+ word-break: break-word;
  position:absolute;
  line-height:1.5;
  font-size: 1.5rem;
  top:300px;
  left:100px;
  right:100px;
+
+}
+.text > p{
+ word-break: break-word;
+
+ line-height:1.5;
+ font-size: 1.5rem;
+ top:150px;
+
 }
